# zola_db

./: CLAUDE.md  Cargo.toml  README.md
crates/zola_db/: Cargo.toml
crates/zola_db/src/: asof.rs  error.rs  format.rs  ingest.rs  io.rs  lib.rs  partition.rs  schema.rs  storage.rs  symbol_map.rs
crates/zola_db_client/: Cargo.toml
crates/zola_db_client/src/: lib.rs
crates/zola_db_core/: Cargo.toml
crates/zola_db_core/src/: lib.rs
crates/zola_db_proto/: Cargo.toml
crates/zola_db_proto/src/: lib.rs
crates/zola_db_server/: Cargo.toml
crates/zola_db_server/src/: binance.rs  client.rs  lib.rs  main.rs  server.rs
crates/zola_db_test_binance/: Cargo.toml
crates/zola_db_test_binance/src/: download.rs  ingest.rs  main.rs  parse.rs  polars_verify.rs  symbols.rs  verify.rs
