[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
zola_db = { path = "crates/zola_db" }
zola_db_core = { path = "crates/zola_db_core" }
zola_db_proto = { path = "crates/zola_db_proto" }
arrow = "58"
bytes = "1"
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
jiff = { version = "0.2", features = ["serde"] }
memmap2 = "0.9"
tempfile = "3"
thiserror = "2.0"
reqwest = { version = "0.13", features = ["query"] }
tokio = { version = "1", features = ["full"] }
zip = "8"
