[package]
name = "zola_db_test_binance"
version = "0.1.0"
edition = "2024"

[dependencies]
zola_db = { path = "../zola_db" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
jiff.workspace = true
tempfile.workspace = true
